--- a/templates/view_all_items.html
+++ b/templates/view_all_items.html
@@ -12,18 +12,15 @@
                         <div>
                             <p class="font-semibold m-0">{{ item.item_title }}</p>
                             <p class="text-gray-600 text-sm font-light m-0">{{ item.item_description }}</p>
-                            <p class="text-gray-600 text-sm font-light m-0">{{ item.item_pk }}</p>
                         </div>
                         <p class="text-blue-500 text-sm font-light m-0">DKK {{ item.item_price }}</p>
                     </div>
                     <div class="w-1/3 h-20 overflow-hidden flex justify-center items-center rounded-lg">
-                        {% if item.item_image_names %}
-                            {% set images = item.item_image_names.split(',') %}
-                            <img
-                                src="{{ url_for('static', filename='item_images/' + images[0]) }}"
-                                alt="{{ item.item_title }}"
-                                class="h-full w-full object-cover" />
-                        {% endif %}
+                        
+                        <img
+                            src="{{ url_for('static', filename='item_images/' + item['item_image_names'][0]) }}"
+                            alt="{{ item.item_title }}"
+                            class="h-full w-full object-cover" />
                     </div>
                 </article>
             
