order_confirmation_email

--- a/templates/_top_logged.html
+++ b/templates/_top_logged.html
@@ -14,7 +14,7 @@
 
     <body class="w-full h-screen text-gray-950">
         <div id="toast" class="flex flex-col justify-center fixed w-full top-4 z-10"></div>
-        <header class="">
+        <header>
             {% if 'restaurant' in user.roles %}
                 {% include "__header_restaurant.html"%}
             {% elif 'customer' in user.roles %}
