--- a/templates/view_partner.html
+++ b/templates/view_partner.html
@@ -1,7 +1,7 @@
 {% include "_top_logged.html" %}
 
 <main class="w-full d-flex">
-    <div class="w-full h-100vh">
+    <div class="w-full h-screen">
         <h1>Partner</h1>
         {{ user }}
     </div>
