--- a/templates/_top.html
+++ b/templates/_top.html
@@ -11,7 +11,6 @@
         {{ title or "Company" }}
     </title>
 </head>
-<body class="w-full h-100vh text-c-gray:-16">
-
+<body class="w-full h-screen text-gray-950">
     <div id="toast" class="flex flex-col justify-center fixed w-full top-4 z-10"></div>
     <div>
