--- a/templates/view_edit_profile.html
+++ b/templates/view_edit_profile.html
@@ -55,7 +55,7 @@
         
         <div class="flex flex-col">
             <label for="user_email" class="text-sm  text-gray-500 mb-1">
-                Email:
+                Email
             </label>
             <input
                 type="text"
