--- a/templates/view_search_results.html
+++ b/templates/view_search_results.html
@@ -37,7 +37,7 @@
                 </div>
                 <div class="w-1/3 h-20 overflow-hidden flex justify-center items-center rounded-lg">
                     <img
-                        src="{{ url_for('static', filename='item_images/' + item.item_image_name) }}"
+                        src="{{ url_for('static', filename='item_images/' + item.item_image_names[0]) }}"
                         alt="{{ item.item_title }}"
                         class="h-full w-full object-cover" />
                 </div>
