pagination_for_items_and_restaurants

--- a/templates/___btn_more.html
+++ b/templates/___btn_more.html
@@ -1,4 +1,4 @@
-<button id="btn_next_page" class="w-full py-4 cursor-pointer" mix-get="/page/{{ next_page }}">
+<button id="btn_next_page" class="w-full py-4 cursor-pointer" mix-get="/page/{{ table_name }}/{{ next_page }}">
     Show more
 </button>
 
