--- a/templates/view_all_items.html
+++ b/templates/view_all_items.html
@@ -1,6 +1,6 @@
 {% include "_top_logged.html" %}
 
-<main class="w-full">
+<main class="w-full pb-5">
     <h1 class="text-2xl font-semibold mb-6">All Items</h1>
 
     <div class="flex flex-col items-center pb-5">
@@ -10,7 +10,7 @@
             {% endfor %}
         </div>
     </div>
-    {% include "___btn_more.html"%}
+    <div class="text-center">{% include "___btn_more.html"%}</div>
 </main>
         <!-- <button class="px-20 py-4 rounded-sm"
             mix-get="/items/page/1"
