--- a/templates/view_all_restaurants.html
+++ b/templates/view_all_restaurants.html
@@ -3,24 +3,13 @@
 <main class="w-full">
     <h1 class="text-2xl font-semibold mb-6">All Restaurants</h1>
 
-    <div class="flex flex-col items-center">
-        <div class="flex flex-wrap justify-center items-center gap-5">
+    <div class="flex flex-col items-center ">
+        <div id="restaurants" class="flex flex-wrap justify-center items-center gap-5 pb-5">
             {% for restaurant in restaurants %}
-            <a href="/customer/restaurant/{{ restaurant.restaurant_pk }}" class="block h-30 max-w-96 min-w-80">
-                <article class="flex p-3 shadow-md rounded-lg h-full w-full justify-between">
-                    <div class="w-2/3 flex flex-col justify-between">
-                        <p class="font-semibold m-0">{{ restaurant.restaurant_name }}</p>
-                    </div>
-                    <div class="w-1/3 h-20 overflow-hidden flex justify-center items-center rounded-lg">
-                        <img
-                            src="{{ url_for('static', filename='restaurant_images/' + restaurant.restaurant_image_name) }}"
-                            alt="{{ restaurant.restaurant_name }}"
-                            class="w-full h-full object-cover" />
-                    </div>
-                </article>
-            </a>
+                {% include "__restaurant.html" %}
             {% endfor %}
         </div>
+        <div class="text-center">{% include "___btn_more.html"%}</div>
     </div>
 </main>
 
