env_variables_update

--- a/templates/__header_restaurant.html
+++ b/templates/__header_restaurant.html
@@ -3,8 +3,8 @@
     <a class="text-3xl font-semibold" href="/{{ user.roles[0] }}">Wolt</a>
   </div>
   <div class="flex justify-center w-1/3 gap-4">
-    <button><a href="{{ url_for('view_create_item')}}">Create item</a></button>
-    <button><a href="{{ url_for('view_my_items')}}">My menu</a></button>
+    <button><a href="{{ url_for('view_create_item')}}" class="btn-primary pb-2">Create item</a></button>
+    <button><a href="{{ url_for('view_my_items')}}" class="btn-primary pb-2">My menu</a></button>
   </div>
   <div class="flex gap-3 w-1/3 justify-end pr-20">
     <div class="relative dropdown-container">
@@ -24,10 +24,5 @@
           <a href="{{ url_for('view_edit_restaurant_profile') }}" class="w-full text-left hover:bg-gray-200 p-2 rounded-md block">Edit profile</a>
       </div>
   </div>
-    <button>
-      <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
-        <path stroke-linecap="round" stroke-linejoin="round" d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 0 0-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 0 0-16.536-1.84M7.5 14.25 5.106 5.272M6 20.25a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Zm12.75 0a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Z" />
-      </svg>
-    </button>
   </div>
 </div>
