--- a/styles/input.css
+++ b/styles/input.css
@@ -4,7 +4,7 @@
 
 @layer components {
   .btn-primary {
-    @apply py-2 px-5 bg-violet-500 text-white font-semibold rounded-full shadow-md hover:bg-violet-700 focus:outline-none focus:ring focus:ring-violet-400 focus:ring-opacity-75;
+    @apply pb-1 pt-2 px-5 bg-blue-500 text-white rounded-full shadow-sm transition-colors transform hover:bg-blue-700 focus:outline-none focus:ring focus:ring-violet-400 focus:ring-opacity-75;
   }
   input, select, textarea {
     @apply border-2 border-gray-200 p-2 rounded-md
