--- a/templates/__header_admin.html
+++ b/templates/__header_admin.html
@@ -3,9 +3,9 @@
     <a class="text-3xl font-semibold" href="/{{ user.roles[0] }}">Wolt</a>
   </div>
 
-  <div class="w-1/3 flex justify-center">
-    <a href="{{url_for('view_all_users')}}">See all users</a>
-    <a href="{{url_for('view_all_items_admin')}}">See all items</a>
+  <div class="w-1/3 flex justify-center gap-4">
+    <a href="{{url_for('view_all_users')}}" class="btn-primary">See all users</a>
+    <a href="{{url_for('view_all_items_admin')}}" class="btn-primary">See all items</a>
   </div>
 
     <div class="relative dropdown-container pr-20 w-1/3 flex justify-end">
