--- a/templates/__header_partner.html
+++ b/templates/__header_partner.html
@@ -1,6 +1,9 @@
 <div class="flex w-full py-5 justify-between border-b border-gray-100">
   <div class="pl-20">
-    <a class="text-3xl font-semibold" href="/{{ user.roles[0] }}">Wolt</a>
+    <a class="text-3xl font-semibold" href="/{{ role }}">Wolt</a>
+    {% if user and user.roles|length > 1 %}
+    <a href="{{ url_for('view_choose_role')}}">Change role</a>
+    {% endif %}
   </div>
   <div class="flex gap-3 w-1/3 justify-end pr-20">
     <div class="relative dropdown-container">
