--- a/templates/__header_customer.html
+++ b/templates/__header_customer.html
@@ -1,7 +1,7 @@
 <div>
   <div class="flex w-full py-5 justify-start border-b border-gray-100">
     <div class="w-1/3 flex gap-3 justify-start align-middle pl-20">
-      <a class="text-3xl font-semibold" href="/{{ role }}">Wolt</a>
+      <a class="text-3xl font-semibold" href="/{{  role if role else user.roles[0] }}">Wolt</a>
       {% if user and user.roles|length > 1 %}
           <a href="{{ url_for('view_choose_role')}}">Change role</a>
       {% endif %}
