--- a/templates/___btn_more.html
+++ b/templates/___btn_more.html
@@ -1,4 +1,4 @@
-<button id="btn_next_page" class="btn-primary" mix-get="/page/{{ table_name }}/{{ next_page }}">
+<button id="btn_next_page" class="btn-secondary" mix-get="/page/{{ table_name }}/{{ next_page }}">
     Show more
 </button>
 
