--- a/styles/input.css
+++ b/styles/input.css
@@ -1,12 +1,23 @@
+@import url('https://fonts.googleapis.com/css2?family=Baloo+2:wght@400..800&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 @layer components {
   .btn-primary {
-    @apply pb-1 pt-2 px-5 bg-blue-500 text-white rounded-full shadow-sm transition-colors transform hover:bg-blue-700 focus:outline-none focus:ring focus:ring-violet-400 focus:ring-opacity-75;
+    @apply pb-1 pt-2 px-5 bg-blue-500 text-white rounded-full shadow-sm transition-colors transform hover:bg-blue-700;
   }
+
+  .btn-secondary {
+    @apply py-2 px-5 text-sm bg-blue-50 text-blue-700 rounded-full shadow-sm transition-colors transform hover:bg-blue-100;
+  }
+
   input, select, textarea {
     @apply border-2 border-gray-200 p-2 rounded-md
+  }
+
+  h1, h2, h3, h4, h5, h6 {
+    @apply font-baloo font-bold
   }
 }
