--- a/templates/__header_customer.html
+++ b/templates/__header_customer.html
@@ -9,7 +9,7 @@
     
     <div class="w-1/3 justify-items-center">
         <form id="search_frm" method="GET" action="/search" class="relative w-fit">
-            <input id="search_field" type="text" name="search_field" placeholder="Search in Wolt..." class="border-none placeholder:text-sm capitalize rounded-full bg-gray-200 h-10 pl-10"/>
+            <input id="search_field" type="text" name="search_field" placeholder="Search in Wolt..." class="border-none placeholder:text-sm capitalize rounded-full bg-zinc-200 h-10 pl-10 w-72"/>
             <button type="submit" class="absolute left-3 top-3">
                 <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2.5" stroke="currentColor" class="size-4">
                     <path stroke-linecap="round" stroke-linejoin="round" d="m21 21-5.197-5.197m0 0A7.5 7.5 0 1 0 5.196 5.196a7.5 7.5 0 0 0 10.607 10.607Z" />
@@ -51,13 +51,13 @@
   </div>
   <div class="flex w-full justify-center gap-4 pt-5">
     
-        <a href="{{ url_for('view_all_items')}}" class="flex items-center bg-blue-500 p-2 px-4 rounded-full text-sm text-white gap-2">
+        <a href="{{ url_for('view_all_items')}}" class="flex items-center bg-blue-700 p-2 px-4 rounded-full text-sm text-white gap-2">
           <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
             <path stroke-linecap="round" stroke-linejoin="round" d="M2.25 21h19.5m-18-18v18m10.5-18v18m6-13.5V21M6.75 6.75h.75m-.75 3h.75m-.75 3h.75m3-6h.75m-.75 3h.75m-.75 3h.75M6.75 21v-3.375c0-.621.504-1.125 1.125-1.125h2.25c.621 0 1.125.504 1.125 1.125V21M3 3h12m-.75 4.5H21m-3.75 3.75h.008v.008h-.008v-.008Zm0 3h.008v.008h-.008v-.008Zm0 3h.008v.008h-.008v-.008Z" />
           </svg>  
           <span>Discovery</span>
         </a>
-        <a href="{{ url_for('view_all_restaurants')}}" class="flex items-center bg-blue-500 p-2 px-4 rounded-full text-sm text-white gap-2">
+        <a href="{{ url_for('view_all_restaurants')}}" class="flex items-center bg-blue-700 p-2 px-4 rounded-full text-sm text-white gap-2">
           <svg class="size-5 fill-white" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
             <path d="M416 0C400 0 288 32 288 176l0 112c0 35.3 28.7 64 64 64l32 0 0 128c0 17.7 14.3 32 32 32s32-14.3 32-32l0-128 0-112 0-208c0-17.7-14.3-32-32-32zM64 16C64 7.8 57.9 1 49.7 .1S34.2 4.6 32.4 12.5L2.1 148.8C.7 155.1 0 161.5 0 167.9c0 45.9 35.1 83.6 80 87.7L80 480c0 17.7 14.3 32 32 32s32-14.3 32-32l0-224.4c44.9-4.1 80-41.8 80-87.7c0-6.4-.7-12.8-2.1-19.1L191.6 12.5c-1.8-8-9.3-13.3-17.4-12.4S160 7.8 160 16l0 134.2c0 5.4-4.4 9.8-9.8 9.8c-5.1 0-9.3-3.9-9.8-9L127.9 14.6C127.2 6.3 120.3 0 112 0s-15.2 6.3-15.9 14.6L83.7 151c-.5 5.1-4.7 9-9.8 9c-5.4 0-9.8-4.4-9.8-9.8L64 16zm48.3 152l-.3 0-.3 0 .3-.7 .3 .7z"/>
           </svg>
