--- a/templates/__restaurant.html
+++ b/templates/__restaurant.html
@@ -1,13 +1,24 @@
-<a href="/customer/restaurant/{{ restaurant.restaurant_pk }}" class="block h-30 max-w-96 min-w-80">
-  <article class="flex p-3 shadow-md rounded-lg h-full w-full justify-between">
-      <div class="w-2/3 flex flex-col justify-between">
-          <p class="font-semibold m-0">{{ restaurant.restaurant_name }}</p>
-      </div>
-      <div class="w-1/3 h-20 overflow-hidden flex justify-center items-center rounded-lg">
-          <img
-              src="{{ url_for('static', filename='restaurant_images/' + restaurant.restaurant_image_name) }}"
-              alt="{{ restaurant.restaurant_name }}"
-              class="w-full h-full object-cover" />
-      </div>
-  </article>
+<a href="/customer/restaurant/{{ restaurant.restaurant_pk }}" class="block h-80 w-1/3 max-w-[30rem] min-w-80 group">
+<article class="shadow-md rounded-lg overflow-hidden h-full w-full justify-between hover:shadow-xl transform transition-shadow duration-500">
+    <div class="w-full h-2/3 overflow-hidden flex justify-center items-center">
+        <img
+            src="{{ url_for('static', filename='restaurant_images/' + restaurant.restaurant_image_name) }}"
+            alt="{{ restaurant.restaurant_name }}"
+            class="w-full h-full object-cover transform transition-transform duration-500 group-hover:scale-105" />
+    </div>
+    <div class="h-1/3 py-3 ">
+        <div class="border-b border-dashed pb-3">
+            <p class=" m-0 px-5">{{ restaurant.restaurant_name }}</p>
+            <p class="text-xs text-zinc-500 font-light pt-2 px-5">{{ restaurant.restaurant_street }}, {{ restaurant.restaurant_postalcode }} {{ restaurant.restaurant_city }}</p>
+        </div>
+        <div class="px-5 pt-2 text-xs font-light text-zinc-500 flex items-center">
+            <p class="pr-1">DKK 39.00 ·</p>
+            <p class="pr-1">$$<span class="text-zinc-300">$$</span> ·</p>
+            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-3">
+                <path stroke-linecap="round" stroke-linejoin="round" d="M15.182 15.182a4.5 4.5 0 0 1-6.364 0M21 12a9 9 0 1 1-18 0 9 9 0 0 1 18 0ZM9.75 9.75c0 .414-.168.75-.375.75S9 10.164 9 9.75 9.168 9 9.375 9s.375.336.375.75Zm-.375 0h.008v.015h-.008V9.75Zm5.625 0c0 .414-.168.75-.375.75s-.375-.336-.375-.75.168-.75.375-.75.375.336.375.75Zm-.375 0h.008v.015h-.008V9.75Z" />
+            </svg>
+            <p class="pl-1">8.6</p>
+        </div>
+    </div>
+</article>
 </a>
