--- a/templates/__item.html
+++ b/templates/__item.html
@@ -1,13 +1,18 @@
-<a href="/add-item/{{ item.item_pk }}" class="shadow-md rounded-lg h-36 max-w-[30rem] min-w-80 w-1/3 hover:shadow-lg transition-shadow relative group">
-<article class="flex p-3 justify-between w-full h-full">
-    <div class="w-2/3 flex flex-col justify-between">
+<a href="/add-item/{{ item.item_pk }}" class="shadow-md rounded-lg h-36 border-1 border-zinc-100 max-w-[30rem] min-w-80 w-1/3 hover:shadow-lg transition-shadow relative group">
+<article class="flex p-3 justify-between w-full h-full ">
+    <div class="w-3/5 flex flex-col justify-between pr-5">
         <div>
-            <p class="font-semibold m-0">{{ item.item_title }}</p>
-            <p class="text-gray-600 text-sm font-light m-0">{{ item.item_description }}</p>
+            <p class="text-sm pb-2.5">{{ item.item_title }}</p>
+            <p class="text-gray-500 text-sm font-light m-0 line-clamp-2">{{ item.item_description }}</p>
         </div>
-        <p class="text-blue-500 text-sm font-light m-0">DKK {{ item.item_price }}</p>
+        <div class="flex gap-3 items-baseline">
+            <p class="text-blue-700 text-sm font-light m-0">DKK {{ item.item_price }}</p>
+            {% if show_popular %}
+            <p class="px-2 py-1 w-fit text-xs text-white bg-blue-700 rounded-md">Popular</p>
+            {% endif %}
+        </div>
     </div>
-    <div class="w-1/3 h-full overflow-hidden flex justify-center items-center rounded-lg">
+    <div class="w-2/5 h-full overflow-hidden flex justify-center items-center rounded-lg">
         <img
             src="{{ url_for('static', filename='item_images/' + item['item_image_names'][0]) }}"
             alt="{{ item.item_title }}"
@@ -17,7 +22,7 @@
 
 <div class="absolute inset-0 bg-blue-400 bg-opacity-20 opacity-0 rounded-lg group-hover:opacity-100 flex justify-center items-center transition-opacity">
     <div class="size-12 bg-white rounded-full flex justify-center items-center hover:scale-125 transition-transform">
-        <span class="text-blue-500 font-bold text-4xl pb-1">&plus;</span>
+        <span class="text-blue-700 font-bold text-4xl pb-1">&plus;</span>
     </div>
 </div>
 </a>
