--- a/templates/view_all_items.html
+++ b/templates/view_all_items.html
@@ -1,8 +1,8 @@
 {% include "_top_logged.html" %}
 
-<main class="w-full pb-5">
-    <h1 class="text-2xl font-semibold mb-6">All Items</h1>
-
+<main class="w-full py-20">
+    <h1 class="text-5xl font-extrabold mb-6">Menu items near me</h1>
+    <h2 class="text-3xl font-semibold mb-6">All items</h2>
     <div class="flex flex-col items-center pb-5">
         <div id="items" class="flex flex-wrap justify-center items-center gap-3">
             {% for item in items %}
