--- a/templates/__header_customer.html
+++ b/templates/__header_customer.html
@@ -1,10 +1,13 @@
 <div>
   <div class="flex w-full py-5 justify-start border-b border-gray-100">
-    <div class="w-1/3 flex gap-3 justify-start align-middle pl-20">
+    <div class="w-1/3 flex gap-3 justify-start items-center pl-20">
       <a class="text-3xl font-semibold" href="/{{  role if role else user.roles[0] }}">Wolt</a>
-      {% if user and user.roles|length > 1 %}
-          <a href="{{ url_for('view_choose_role')}}">Change role</a>
-      {% endif %}
+      <div class="p-2 ml-3 bg-blue-100 rounded-full text-blue-700">
+        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" class="size-6">
+          <path stroke-linecap="round" stroke-linejoin="round" d="m2.25 12 8.954-8.955c.44-.439 1.152-.439 1.591 0L21.75 12M4.5 9.75v10.125c0 .621.504 1.125 1.125 1.125H9.75v-4.875c0-.621.504-1.125 1.125-1.125h2.25c.621 0 1.125.504 1.125 1.125V21h4.125c.621 0 1.125-.504 1.125-1.125V9.75M8.25 21h8.25" />
+        </svg>        
+      </div>
+      <a href="{{ url_for('view_edit_profile') }}" class="text-sm text-blue-700 hover:text-blue-800 transition-colors transform">Home ({{user.account_street}})</a>
     </div>
     
     <div class="w-1/3 justify-items-center">
@@ -19,6 +22,9 @@
     </div>
     
     <div class="flex gap-3 w-1/3 justify-end pr-20">
+      {% if user and user.roles|length > 1 %}
+      <a class="btn-secondary rounded-lg pt-2.5 mr-5" href="{{ url_for('view_choose_role')}}">Change role</a>
+      {% endif %}
         <div class="relative dropdown-container">
             <button class="flex items-center gap-2 p-1 rounded-full hover:bg-gray-300 bg-gray-200 w-20" id="dropdown-btn">
                 <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-8">
@@ -42,7 +48,7 @@
           </svg>
           
           {% if basket_quantity > 0 %} 
-            <span class="absolute -top-1 -right-0.5 bg-red-500 text-black rounded-full w-4 h-4 text-xs flex items-center justify-center">
+            <span class="absolute -top-1 -right-0.5 font-light bg-zinc-950 text-white rounded-full w-4 h-4 text-xs flex items-center justify-center">
               {{basket_quantity}}
             </span>
             {% endif %}
