--- a/templates/__header_partner.html
+++ b/templates/__header_partner.html
@@ -1,11 +1,12 @@
 <div class="flex w-full py-5 justify-between border-b border-gray-100">
   <div class="pl-20">
     <a class="text-3xl font-semibold" href="/{{ role if role else user.roles[0] }}">Wolt</a>
-    {% if user and user.roles|length > 1 %}
-    <a href="{{ url_for('view_choose_role')}}">Change role</a>
-    {% endif %}
+
   </div>
   <div class="flex gap-3 w-1/3 justify-end pr-20">
+    {% if user and user.roles|length > 1 %}
+    <a class="btn-secondary rounded-lg pt-2.5 mr-5" href="{{ url_for('view_choose_role')}}">Change role</a>
+    {% endif %}
     <div class="relative dropdown-container">
         <button class="flex items-center gap-2 p-1 rounded-full hover:bg-gray-300 bg-gray-200 w-20" id="dropdown-btn">
             <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-8">
