--- a/templates/view_create_item.html
+++ b/templates/view_create_item.html
@@ -1,5 +1,5 @@
 {% include "_top_logged.html" %}
-<main class="w-full mt-10">
+<main class="w-full mt-10 px-20">
     <h1 class="text-3xl font-bold pb-10">Create item</h1>
 
     <form enctype="multipart/form-data" id="frm_create_item" class="pt-6 w-full max-w-md flex flex-col gap-6 mx-auto shadow-lg p-10 rounded-md mt-8">
