--- a/templates/view_restaurant.html
+++ b/templates/view_restaurant.html
@@ -1,7 +1,7 @@
 {% include "_top_logged.html" %}
 
-<main class="w-full">
-    <div class="w-full h-100vh">
+<main class="flex flex-col px-20">
+    <div class="w-full">
         <h1>Restaurant</h1>
         {{ user }}
     </div>
