--- a/styles/input.css
+++ b/styles/input.css
@@ -20,4 +20,13 @@
   h1, h2, h3, h4, h5, h6 {
     @apply font-baloo font-bold
   }
+  html, body {
+    @apply h-full m-0
+  }
+  body {
+    @apply flex flex-col
+  }
+  main {
+    @apply grow
+  }
 }
