--- a/templates/__header_admin.html
+++ b/templates/__header_admin.html
@@ -1,4 +1,4 @@
-<div class="flex w-full py-5 border-b border-gray-100">
+<div class="flex w-full py-5 border-b border-zinc-200">
   <div class="pl-20 w-1/3">
     <a class="text-3xl font-semibold" href="/{{ user.roles[0] }}">Wolt</a>
   </div>
