--- a/templates/__header_customer.html
+++ b/templates/__header_customer.html
@@ -1,5 +1,5 @@
 <div>
-  <div class="flex w-full py-5 justify-start border-b border-gray-100">
+  <div class="flex w-full py-5 justify-start border-b border-zinc-200">
     <div class="w-1/3 flex gap-3 justify-start items-center pl-20">
       <a class="text-3xl font-semibold" href="/{{  role if role else user.roles[0] }}">Wolt</a>
       <div class="p-2 ml-3 bg-blue-100 rounded-full text-blue-700">
@@ -26,23 +26,23 @@
       <a class="btn-secondary rounded-lg pt-2.5 mr-5" href="{{ url_for('view_choose_role')}}">Change role</a>
       {% endif %}
         <div class="relative dropdown-container">
-            <button class="flex items-center gap-2 p-1 rounded-full hover:bg-gray-300 bg-gray-200 w-20" id="dropdown-btn">
-                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-8">
-                    <path stroke-linecap="round" stroke-linejoin="round" d="M17.982 18.725A7.488 7.488 0 0 0 12 15.75a7.488 7.488 0 0 0-5.982 2.975m11.963 0a9 9 0 1 0-11.963 0m11.963 0A8.966 8.966 0 0 1 12 21a8.966 8.966 0 0 1-5.982-2.275M15 9.75a3 3 0 1 1-6 0 3 3 0 0 1 6 0Z" />
-                </svg>
-                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
-                  <path stroke-linecap="round" stroke-linejoin="round" d="m19.5 8.25-7.5 7.5-7.5-7.5" />
-                </svg>
-            </button>
+          <button class="flex items-center gap-2 p-0.5 rounded-full hover:bg-zinc-300 bg-zinc-200 w-20" id="dropdown-btn">
+            <span class="size-9 rounded-full flex justify-center items-center bg-[#CFFFCC] border-2 border-white">
+              <p class="uppercase text-sm text-zinc-500">{{ user.account_name[0] }}{{ user.account_last_name[0] }}</p>
+            </span>
+            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2.5" stroke="currentColor" class="size-5">
+              <path stroke-linecap="round" stroke-linejoin="round" d="m19.5 8.25-7.5 7.5-7.5-7.5" />
+            </svg>
+          </button>
       
-            <div id="dropdown-menu" class="absolute right-0 hidden mt-1 bg-white rounded-md shadow-lg w-48 z-50">
-                <form method="POST" action="{{url_for('logout')}}" class="">
-                    <button class="w-full text-left hover:bg-gray-200 p-2 rounded-md">Logout</button>
-                </form>
-                <a href="{{ url_for('view_edit_profile') }}" class="w-full text-left hover:bg-gray-200 p-2 rounded-md block">Edit profile</a>
-            </div>
+          <div id="dropdown-menu" class="absolute right-0 hidden mt-2 bg-white rounded-md shadow-lg w-48 z-50">
+            <div class="p-2"><a href="{{ url_for('view_edit_profile') }}" class="p-2 w-full text-left hover:bg-zinc-100 rounded-md block">Edit profile</a></div>
+              <form method="POST" action="{{url_for('logout')}}" class="border-zinc-200 border-t-1">
+                  <div class="p-2"><button class="w-full text-left hover:bg-zinc-100 p-2 rounded-md">Logout</button></div>
+              </form>
+          </div>
         </div>
-        <a href="/customer/view-basket" class="flex relative justify-center items-center rounded-full p-1  hover:bg-gray-300 bg-gray-200 size-10">
+        <a href="/customer/view-basket" class="flex relative justify-center items-center rounded-full p-1  hover:bg-zinc-300 bg-gray-200 size-10">
           <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" class="size-6">
             <path stroke-linecap="round" stroke-linejoin="round" d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 0 0-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 0 0-16.536-1.84M7.5 14.25 5.106 5.272M6 20.25a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Zm12.75 0a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Z" />
           </svg>
@@ -56,18 +56,18 @@
     </div>
   </div>
   <div class="flex w-full justify-center gap-4 pt-5">
-    <a href="{{ url_for('view_all_items')}}" class="flex items-center p-2 px-4 rounded-full text-sm gap-2 {% if request.endpoint == 'view_all_items' %}text-white bg-blue-700{% else %} bg-transparent text-zinc-500 hover:bg-zinc-200 hover:text-zinc-900 transition-colors{% endif %}">
+    <a href="{{ url_for('view_all_items')}}" class="flex items-center p-2 px-4 rounded-full text-sm gap-2 {% if request.endpoint == 'view_all_items' %}text-white bg-blue-700{% else %} bg-transparent text-zinc-500 hover:bg-zinc-100 hover:text-zinc-900 transition-colors{% endif %}">
       <svg class="size-6 {% if request.endpoint == 'view_all_items' %}fill-white {% else %} fill-zinc-500 group-hover:fill-zinc-900 transition-colors{% endif %}" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" ">
         <path stroke-linecap="round" stroke-linejoin="round" d="M2.25 21h19.5m-18-18v18m10.5-18v18m6-13.5V21M6.75 6.75h.75m-.75 3h.75m-.75 3h.75m3-6h.75m-.75 3h.75m-.75 3h.75M6.75 21v-3.375c0-.621.504-1.125 1.125-1.125h2.25c.621 0 1.125.504 1.125 1.125V21M3 3h12m-.75 4.5H21m-3.75 3.75h.008v.008h-.008v-.008Zm0 3h.008v.008h-.008v-.008Zm0 3h.008v.008h-.008v-.008Z" />
       </svg>  
       <span>Discovery</span>
     </a>
-    <a href="{{ url_for('view_all_restaurants')}}" class="flex items-center p-2 px-4 rounded-full text-sm  gap-2 group {% if request.endpoint == 'view_all_restaurants' %}text-white bg-blue-700 {% else %} bg-transparent text-zinc-500 hover:bg-zinc-200 hover:text-zinc-900 transition-colors{% endif %}">
+    <a href="{{ url_for('view_all_restaurants')}}" class="flex items-center p-2 px-4 rounded-full text-sm  gap-2 group {% if request.endpoint == 'view_all_restaurants' %}text-white bg-blue-700 {% else %} bg-transparent text-zinc-500 hover:bg-zinc-100 hover:text-zinc-900 transition-colors{% endif %}">
       <svg class="size-5 {% if request.endpoint == 'view_all_restaurants' %}fill-white {% else %} fill-zinc-500 group-hover:fill-zinc-900 transition-colors{% endif %}" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
         <path d="M416 0C400 0 288 32 288 176l0 112c0 35.3 28.7 64 64 64l32 0 0 128c0 17.7 14.3 32 32 32s32-14.3 32-32l0-128 0-112 0-208c0-17.7-14.3-32-32-32zM64 16C64 7.8 57.9 1 49.7 .1S34.2 4.6 32.4 12.5L2.1 148.8C.7 155.1 0 161.5 0 167.9c0 45.9 35.1 83.6 80 87.7L80 480c0 17.7 14.3 32 32 32s32-14.3 32-32l0-224.4c44.9-4.1 80-41.8 80-87.7c0-6.4-.7-12.8-2.1-19.1L191.6 12.5c-1.8-8-9.3-13.3-17.4-12.4S160 7.8 160 16l0 134.2c0 5.4-4.4 9.8-9.8 9.8c-5.1 0-9.3-3.9-9.8-9L127.9 14.6C127.2 6.3 120.3 0 112 0s-15.2 6.3-15.9 14.6L83.7 151c-.5 5.1-4.7 9-9.8 9c-5.4 0-9.8-4.4-9.8-9.8L64 16zm48.3 152l-.3 0-.3 0 .3-.7 .3 .7z"/>
       </svg>
       <span>Restaurants</span>
     </a>
   </div>
-  
+
 </div>
