--- a/templates/__header_restaurant.html
+++ b/templates/__header_restaurant.html
@@ -1,27 +1,46 @@
-<div class="flex w-full py-5 justify-start border-b border-gray-100">
-  <div class="w-1/3 pl-20">
+<div class="flex w-full py-5 justify-start border-b border-zinc-200">
+  <div class="w-1/3 flex gap-3 justify-start items-center pl-20">
     <a class="text-3xl font-semibold" href="/{{ user.roles[0] }}">Wolt</a>
+    <div class="p-3 ml-3 bg-blue-100 rounded-full">
+      <svg class="size-5 fill-blue-700" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
+        <path d="M416 0C400 0 288 32 288 176l0 112c0 35.3 28.7 64 64 64l32 0 0 128c0 17.7 14.3 32 32 32s32-14.3 32-32l0-128 0-112 0-208c0-17.7-14.3-32-32-32zM64 16C64 7.8 57.9 1 49.7 .1S34.2 4.6 32.4 12.5L2.1 148.8C.7 155.1 0 161.5 0 167.9c0 45.9 35.1 83.6 80 87.7L80 480c0 17.7 14.3 32 32 32s32-14.3 32-32l0-224.4c44.9-4.1 80-41.8 80-87.7c0-6.4-.7-12.8-2.1-19.1L191.6 12.5c-1.8-8-9.3-13.3-17.4-12.4S160 7.8 160 16l0 134.2c0 5.4-4.4 9.8-9.8 9.8c-5.1 0-9.3-3.9-9.8-9L127.9 14.6C127.2 6.3 120.3 0 112 0s-15.2 6.3-15.9 14.6L83.7 151c-.5 5.1-4.7 9-9.8 9c-5.4 0-9.8-4.4-9.8-9.8L64 16zm48.3 152l-.3 0-.3 0 .3-.7 .3 .7z"/>
+      </svg>
+    </div>
+    <a href="{{ url_for('view_edit_profile') }}" class="text-sm text-blue-700 hover:text-blue-800 transition-colors transform">
+      <span class="font-semibold">Restaurant</span> {{user.account_name}}</a>
   </div>
   <div class="flex justify-center w-1/3 gap-4">
-    <button><a href="{{ url_for('view_create_item')}}" class="btn-primary pb-2">Create item</a></button>
-    <button><a href="{{ url_for('view_my_items')}}" class="btn-primary pb-2">My menu</a></button>
+    <div class="flex w-full justify-center gap-4">
+      <a href="{{ url_for('view_create_item')}}" class="flex items-center p-2 px-4 rounded-full text-sm gap-2 group {% if request.endpoint == 'view_create_item' %}text-white bg-blue-700 {% else %} bg-transparent text-zinc-500 hover:bg-zinc-100 hover:text-zinc-900 transition-colors{% endif %}">
+        <svg class="size-6 {% if request.endpoint == 'view_create_item' %}stroke-white {% else %} stroke-zinc-500 group-hover:stroke-zinc-900 transition-colors{% endif %}" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" >
+          <path stroke-linecap="round" stroke-linejoin="round" d="M12 9v6m3-3H9m12 0a9 9 0 1 1-18 0 9 9 0 0 1 18 0Z" />
+        </svg>
+        <span>Create item</span>
+      </a>
+      <a href="{{ url_for('view_my_items')}}" class="flex items-center p-2 px-4 rounded-full text-sm  gap-2 group {% if request.endpoint == 'view_my_items' %}text-white bg-blue-700 {% else %} bg-transparent text-zinc-500 hover:bg-zinc-100 hover:text-zinc-900 transition-colors{% endif %}">
+        <svg class="size-5 {% if request.endpoint == 'view_my_items' %}fill-white {% else %} fill-zinc-500 group-hover:fill-zinc-900 transition-colors{% endif %}" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
+          <path d="M169.7 .9c-22.8-1.6-41.9 14-47.5 34.7L110.4 80c.5 0 1.1 0 1.6 0c176.7 0 320 143.3 320 320c0 .5 0 1.1 0 1.6l44.4-11.8c20.8-5.5 36.3-24.7 34.7-47.5C498.5 159.5 352.5 13.5 169.7 .9zM399.8 410.2c.1-3.4 .2-6.8 .2-10.2c0-159.1-128.9-288-288-288c-3.4 0-6.8 .1-10.2 .2L.5 491.9c-1.5 5.5 .1 11.4 4.1 15.4s9.9 5.6 15.4 4.1L399.8 410.2zM176 208a32 32 0 1 1 0 64 32 32 0 1 1 0-64zm64 128a32 32 0 1 1 64 0 32 32 0 1 1 -64 0zM96 384a32 32 0 1 1 64 0 32 32 0 1 1 -64 0z"/>
+        </svg>
+        <span>Current menu</span>
+      </a>
+    </div>
   </div>
   <div class="flex gap-3 w-1/3 justify-end pr-20">
     <div class="relative dropdown-container">
-      <button class="flex items-center gap-2 p-1 rounded-full hover:bg-gray-300 bg-gray-200 w-20" id="dropdown-btn">
-          <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-8">
-              <path stroke-linecap="round" stroke-linejoin="round" d="M17.982 18.725A7.488 7.488 0 0 0 12 15.75a7.488 7.488 0 0 0-5.982 2.975m11.963 0a9 9 0 1 0-11.963 0m11.963 0A8.966 8.966 0 0 1 12 21a8.966 8.966 0 0 1-5.982-2.275M15 9.75a3 3 0 1 1-6 0 3 3 0 0 1 6 0Z" />
-          </svg>
-          <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
+      <button class="flex items-center gap-2 p-0.5 rounded-full hover:bg-zinc-300 bg-zinc-200 w-20" id="dropdown-btn">
+          <span class="size-9 rounded-full flex justify-center items-center bg-[#CFFFCC] border-2 border-white">
+            <p class="uppercase text-sm text-zinc-500">{{ user.account_name[0] }}</p>
+          </span>
+          <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2.5" stroke="currentColor" class="size-5">
             <path stroke-linecap="round" stroke-linejoin="round" d="m19.5 8.25-7.5 7.5-7.5-7.5" />
           </svg>
       </button>
-  
-      <div id="dropdown-menu" class="absolute right-0 hidden mt-1 bg-white rounded-md shadow-lg w-48 z-50">
-          <form method="POST" action="{{url_for('logout')}}" class="">
-              <button class="w-full text-left hover:bg-gray-200 p-2 rounded-md">Logout</button>
+
+      <div id="dropdown-menu" class="absolute right-0 hidden mt-2 bg-white rounded-md shadow-lg w-48 z-50">
+        <div class="p-2"><a href="{{ url_for('view_edit_profile') }}" class="p-2 w-full text-left hover:bg-zinc-100 rounded-md block">Edit profile</a></div>
+          <form method="POST" action="{{url_for('logout')}}" class="border-zinc-200 border-t-1">
+              <div class="p-2"><button class="w-full text-left hover:bg-zinc-100 p-2 rounded-md">Logout</button></div>
           </form>
-          <a href="{{ url_for('view_edit_restaurant_profile') }}" class="w-full text-left hover:bg-gray-200 p-2 rounded-md block">Edit profile</a>
       </div>
   </div>
   </div>
