--- a/templates/_top_logged.html
+++ b/templates/_top_logged.html
@@ -12,7 +12,7 @@
         <title>{{ title or "Company" }}</title>
     </head>
 
-    <body class="w-full h-screen text-gray-950">
+    <body class="w-full text-gray-950">
         <div id="toast" class="flex flex-col justify-center fixed w-full top-4 z-10"></div>
         <header>
             {% if 'restaurant' in user.roles %}
@@ -25,6 +25,6 @@
                 {% include "__header_admin.html"%}
             {% endif %}
         </header>
-        <div class="px-20">
+      
         
         
