--- a/templates/view_my_items.html
+++ b/templates/view_my_items.html
@@ -1,6 +1,6 @@
 {% include "_top_logged.html" %}
 
-<main class="w-full">
+<main class="w-full px-20">
     <h1 class="text-4xl font-bold pt-5">My menu</h1>
 
     <div class="flex flex-col items-center">
