--- a/templates/_top.html
+++ b/templates/_top.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="{{ url_for('static', filename='mixhtml.css') }}">
     <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
+    <link rel="stylesheet" href="https://unpkg.com/leaflet.markercluster/dist/MarkerCluster.css" />
+    <link rel="stylesheet" href="https://unpkg.com/leaflet.markercluster/dist/MarkerCluster.Default.css" />
     <link href="/static/output.css" rel="stylesheet">
     <script src="/static/ui.js" type="module"></script>
     <title>
@@ -13,3 +15,21 @@
 </head>
 <body class="w-full h-screen text-gray-950">
     <div id="toast" class="flex flex-col justify-center fixed w-full top-4 z-10"></div>
+    <div class="flex w-full py-5 justify-between border-b border-zinc-200 mb-14">
+        <div class="w-1/3 flex gap-3 justify-start items-center pl-20">
+            <a class="text-3xl font-semibold" href="/">Wolt</a>
+            <div class="p-2 ml-3 bg-blue-100 rounded-full">
+                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" class="size-7 stroke-blue-700">
+                    <path stroke-linecap="round" stroke-linejoin="round" d="M15 10.5a3 3 0 1 1-6 0 3 3 0 0 1 6 0Z" />
+                    <path stroke-linecap="round" stroke-linejoin="round" d="M19.5 10.5c0 7.142-7.5 11.25-7.5 11.25S4.5 17.642 4.5 10.5a7.5 7.5 0 1 1 15 0Z" />
+                </svg>
+            </div>
+            <p class="text-sm font-semibold text-blue-700 hover:text-blue-800 transition-colors transform">
+                Copenhagen<p>
+            </div>
+        
+            <div class="flex gap-3 w-1/3 justify-end pr-20">
+                <a href="" class="btn-secondary rounded-lg text-base">Login</a>
+                <a href="" class="btn-primary rounded-lg">Sign Up</a>
+            </div>
+        </div>
