--- a/templates/view_all_restaurants.html
+++ b/templates/view_all_restaurants.html
@@ -1,6 +1,6 @@
 {% include "_top_logged.html" %}
 
-<main class="w-full py-20">
+<main class="w-full pt-20">
     <h1 class="text-5xl font-extrabold mb-6">Restaurants near me</h1>
     <h2 class="text-3xl font-semibold mb-6">All Restaurants</h2>
 
