--- a/styles/input.css
+++ b/styles/input.css
@@ -6,7 +6,7 @@
 
 @layer components {
   .btn-primary {
-    @apply pb-1 pt-2 px-5 bg-blue-500 text-white rounded-full shadow-sm transition-colors transform hover:bg-blue-700;
+    @apply py-2 px-5 bg-blue-700 text-white rounded-full shadow-sm transition-colors transform hover:bg-blue-600;
   }
 
   .btn-secondary {
