--- a/templates/__header_partner.html
+++ b/templates/__header_partner.html
@@ -1,4 +1,4 @@
-<div class="flex w-full py-5 justify-between border-b border-zinc-200">
+<div class="flex w-full py-5 justify-between border-b border-zinc-200 mb-14">
   <div class="w-1/3 flex gap-3 justify-start items-center pl-20">
     <a class="text-3xl font-semibold" href="/{{  role if role else user.roles[0] }}">Wolt</a>
     <div class="p-2 ml-3 bg-blue-100 rounded-full">
