--- a/templates/__header_restaurant.html
+++ b/templates/__header_restaurant.html
@@ -1,4 +1,4 @@
-<div class="flex w-full py-5 justify-start border-b border-zinc-200">
+<div class="flex w-full py-5 justify-start border-b border-zinc-200 mb-14">
   <div class="w-1/3 flex gap-3 justify-start items-center pl-20">
     <a class="text-3xl font-semibold" href="/{{ user.roles[0] }}">Wolt</a>
     <div class="p-3 ml-3 bg-blue-100 rounded-full">
@@ -6,7 +6,7 @@
         <path d="M416 0C400 0 288 32 288 176l0 112c0 35.3 28.7 64 64 64l32 0 0 128c0 17.7 14.3 32 32 32s32-14.3 32-32l0-128 0-112 0-208c0-17.7-14.3-32-32-32zM64 16C64 7.8 57.9 1 49.7 .1S34.2 4.6 32.4 12.5L2.1 148.8C.7 155.1 0 161.5 0 167.9c0 45.9 35.1 83.6 80 87.7L80 480c0 17.7 14.3 32 32 32s32-14.3 32-32l0-224.4c44.9-4.1 80-41.8 80-87.7c0-6.4-.7-12.8-2.1-19.1L191.6 12.5c-1.8-8-9.3-13.3-17.4-12.4S160 7.8 160 16l0 134.2c0 5.4-4.4 9.8-9.8 9.8c-5.1 0-9.3-3.9-9.8-9L127.9 14.6C127.2 6.3 120.3 0 112 0s-15.2 6.3-15.9 14.6L83.7 151c-.5 5.1-4.7 9-9.8 9c-5.4 0-9.8-4.4-9.8-9.8L64 16zm48.3 152l-.3 0-.3 0 .3-.7 .3 .7z"/>
       </svg>
     </div>
-    <a href="{{ url_for('view_edit_profile') }}" class="text-sm text-blue-700 hover:text-blue-800 transition-colors transform">
+    <a href="{{ url_for('view_edit_restaurant_profile') }}" class="text-sm text-blue-700 hover:text-blue-800 transition-colors transform">
       <span class="font-semibold">Restaurant</span> {{user.account_name}}</a>
   </div>
   <div class="flex justify-center w-1/3 gap-4">
@@ -37,7 +37,7 @@
       </button>
 
       <div id="dropdown-menu" class="absolute right-0 hidden mt-2 bg-white rounded-md shadow-lg w-48 z-50">
-        <div class="p-2"><a href="{{ url_for('view_edit_profile') }}" class="p-2 w-full text-left hover:bg-zinc-100 rounded-md block">Edit profile</a></div>
+        <div class="p-2"><a href="{{ url_for('view_edit_restaurant_profile') }}" class="p-2 w-full text-left hover:bg-zinc-100 rounded-md block">Edit profile</a></div>
           <form method="POST" action="{{url_for('logout')}}" class="border-zinc-200 border-t-1">
               <div class="p-2"><button class="w-full text-left hover:bg-zinc-100 p-2 rounded-md">Logout</button></div>
           </form>
