--- a/templates/view_create_item.html
+++ b/templates/view_create_item.html
@@ -1,8 +1,9 @@
 {% include "_top_logged.html" %}
-<main class="w-full mt-10 px-20">
-    <h1 class="text-3xl font-bold pb-10">Create item</h1>
+<main class="w-full px-20">
+    <h1 class="text-5xl font-extrabold mb-3">Create item</h1>
+    <h2 class="text-2xl font-semibold mb-10">Create a new item for your menu</h2>
 
-    <form enctype="multipart/form-data" id="frm_create_item" class="pt-6 w-full max-w-md flex flex-col gap-6 mx-auto shadow-lg p-10 rounded-md mt-8">
+    <form enctype="multipart/form-data" id="frm_create_item" class="border-1 border-zinc-100 pt-6 w-full max-w-md flex flex-col gap-6 mx-auto shadow-lg p-10 rounded-md mt-8">
         <div class="flex flex-col">
             <label for="item_title">
                 <span>Title</span>
@@ -43,7 +44,7 @@
             <pre id="fileList"></pre>
         </div>
 
-        <button type="submit" class="bg-blue-500 text-white py-2 px-4 rounded-md cursor-pointer hover:bg-blue-600" mix-post="/items" mix-data="#frm_create_item">Create item</button>
+        <button type="submit" class="btn-primary rounded-md" mix-post="/items" mix-data="#frm_create_item">Create item</button>
     </form>
 </main>
 
