--- a/templates/view_edit_item.html
+++ b/templates/view_edit_item.html
@@ -1,8 +1,8 @@
 {% include "_top_logged.html" %}
 
-<main class="w-full flex flex-col items-center px-4">
-    <form action="PUT" id="edit-item-frm" class="pt-6 w-full max-w-md flex flex-col gap-6 mx-auto shadow-lg p-10 rounded-md mt-20">
-        <h1 class="text-2xl font-bold">Edit Item</h1>
+<main class="w-full px-20">
+    <h1 class="text-4xl font-bold pb-10">Edit Item</h1>
+    <form action="PUT" id="edit-item-frm" class="border-1 border-zinc-100 w-full max-w-md flex flex-col gap-6 mx-auto shadow-lg p-10 rounded-md">
         <div class="flex flex-col">
             <label for="item_title" class="text-sm  text-gray-500 mb-1">
                 Title:
@@ -15,14 +15,15 @@
         </div>
 
         <div class="flex flex-col">
-          <label for="item_description">
-              <span>Description</span>
-          </label>
-          <textarea
-              name="item_description"
-              rows="4"
-              cols="50"
-              mix-check="{{ x.DESCRIPTION_REGEX }}">{{ item.item_description }}</textarea>
+            <label for="item_description">
+                <span>Description</span>
+            </label>
+            <textarea
+                name="item_description"
+                rows="4"
+                cols="50"
+                value="{{ item.item_description }}"
+                mix-check="{{ x.DESCRIPTION_REGEX }}">{{ item.item_description }}</textarea>
         </div>
 
         <div class="flex flex-col">
@@ -61,10 +62,10 @@
               type="submit"
               mix-put="/restaurant/item/{{ item.item_pk }}"
               mix-data="#edit-item-frm"
-              class="bg-blue-500 text-white font-medium py-2 px-4 rounded-md hover:bg-blue-600 transition duration-200">
+              class="btn-primary rounded-md">
               Save
           </button>
-          <button class="open-delete-modal-btn bg-red-500 text-white py-2 px-4 rounded-lg hover:bg-red-600 transition-colors duration-200 ease-in-out">
+          <button class="open-delete-modal-btn text-red-500 font-semibold mt-4 border-b-2 border-transparent leading-none w-fit mx-auto hover:border-red-500 transition-colors duration-200 ease-in-out">
             Delete
         </button>
         </div>
