--- a/templates/view_my_items.html
+++ b/templates/view_my_items.html
@@ -1,27 +1,40 @@
 {% include "_top_logged.html" %}
 
 <main class="w-full px-20">
-    <h1 class="text-4xl font-bold pt-5">My menu</h1>
+    <h1 class="text-5xl font-extrabold mb-3">Current menu</h1>
+    <h2 class="text-2xl font-semibold mb-10">The items currently displayed on your menu</h2>
 
     <div class="flex flex-col items-center">
-        <div class="flex flex-wrap justify-center items-center gap-5">
+        <div class="flex flex-wrap items-center gap-5">
             {% for item in items %}
-            <a href="/restaurant/item/{{ item.item_pk }}" class=" h-30 max-w-96 w-full">
-                <article class="flex  shadow-md rounded-lg p-3 justify-between">
-                    <div class="w-2/3 flex flex-col justify-between">
+            <a href="/restaurant/item/{{ item.item_pk }}"  class="shadow-md rounded-lg h-36 border-1 overflow-hidden border-zinc-100 max-w-[30rem] min-w-80 w-1/3 hover:shadow-lg transition-shadow relative group">
+                <article class="flex p-3 justify-between w-full h-full ">
+                    <div class="w-3/5 flex flex-col justify-between pr-5">
                         <div>
-                            <p class="font-semibold m-0">{{ item.item_title }}</p>
-                            <p class="text-gray-600 text-sm font-light m-0">{{ item.item_description }}</p>
+                            <p class="text-sm pb-2.5">{{ item.item_title }}</p>
+                            <p class="text-gray-500 text-sm font-light m-0 line-clamp-2">{{ item.item_description }}</p>
                         </div>
-                        <p class="text-blue-500 text-sm font-light m-0">DKK {{ item.item_price }}</p>
+                        <div class="flex gap-3 items-baseline">
+                            <p class="text-blue-700 text-sm font-light m-0">DKK {{ item.item_price }}</p>
+                            {% if show_popular %}
+                            <p class="px-2 py-1 w-fit text-xs text-white bg-blue-700 rounded-md">Popular</p>
+                            {% endif %}
+                        </div>
                     </div>
-                    <div class="w-1/3 h-20 overflow-hidden flex justify-center items-center rounded-lg">
+                    <div class="w-2/5 h-full overflow-hidden flex justify-center items-center rounded-lg">
                         <img
-                            src="{{ url_for('static', filename='item_images/' + item.item_image_name) }}"
+                            src="{{ url_for('static', filename='item_images/' + item['item_image_names'][0]) }}"
                             alt="{{ item.item_title }}"
                             class="h-full w-full object-cover" />
                     </div>
                 </article>
+                
+                <div class="absolute top-0 right-0  size-12 text-blue-600 bg-blue-100 rounded-bl-3xl flex justify-center items-center hover:scale-125 transition-transform">
+                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-7">
+                        <path stroke-linecap="round" stroke-linejoin="round" d="M10.343 3.94c.09-.542.56-.94 1.11-.94h1.093c.55 0 1.02.398 1.11.94l.149.894c.07.424.384.764.78.93.398.164.855.142 1.205-.108l.737-.527a1.125 1.125 0 0 1 1.45.12l.773.774c.39.389.44 1.002.12 1.45l-.527.737c-.25.35-.272.806-.107 1.204.165.397.505.71.93.78l.893.15c.543.09.94.559.94 1.109v1.094c0 .55-.397 1.02-.94 1.11l-.894.149c-.424.07-.764.383-.929.78-.165.398-.143.854.107 1.204l.527.738c.32.447.269 1.06-.12 1.45l-.774.773a1.125 1.125 0 0 1-1.449.12l-.738-.527c-.35-.25-.806-.272-1.203-.107-.398.165-.71.505-.781.929l-.149.894c-.09.542-.56.94-1.11.94h-1.094c-.55 0-1.019-.398-1.11-.94l-.148-.894c-.071-.424-.384-.764-.781-.93-.398-.164-.854-.142-1.204.108l-.738.527c-.447.32-1.06.269-1.45-.12l-.773-.774a1.125 1.125 0 0 1-.12-1.45l.527-.737c.25-.35.272-.806.108-1.204-.165-.397-.506-.71-.93-.78l-.894-.15c-.542-.09-.94-.56-.94-1.109v-1.094c0-.55.398-1.02.94-1.11l.894-.149c.424-.07.765-.383.93-.78.165-.398.143-.854-.108-1.204l-.526-.738a1.125 1.125 0 0 1 .12-1.45l.773-.773a1.125 1.125 0 0 1 1.45-.12l.737.527c.35.25.807.272 1.204.107.397-.165.71-.505.78-.929l.15-.894Z" />
+                        <path stroke-linecap="round" stroke-linejoin="round" d="M15 12a3 3 0 1 1-6 0 3 3 0 0 1 6 0Z" />
+                    </svg>
+                </div>
             </a>
             {% endfor %}
         </div>
